Shift the help text a little further away from the input to avoid overlaps.

--- a/yabi/yabife/trunk/yabife/static/css/yabi.css
+++ b/yabi/yabife/trunk/yabife/static/css/yabi.css
@@ -576,6 +576,7 @@ display:inline;
 .help {
     color: #999;
     font-size: 90%;
+    margin-top: 0.3em;
 }
 
 input {
